# UCS645

./: .gitignore  readme.md
Assignment4/question1/: ring_comm
Assignment4/question2/: array_sum
Assignment4/question3/: max_min
Assignment4/question4/: dot_product
Assignment_1/: Q1  Q1.c  Q2  Q2.c  Q3  Q3.c
Assignment_2/: Q1  Q1.c  Q2  Q2.c  Q3  Q3.c
Assignment_3/: Makefile  main.cpp
Assignment_5/question1/: daxpy_mpi
Assignment_5/question2/: broadcast_race
Assignment_5/question3/: distributed_dot
Assignment_5/question4/: prime_worker
Assignment_5/question5/: perfect_master_worker
Assignment_6/: Assignment_6.ipynb
Assignment_7/: Assignment_7.ipynb
Assignment_8/: Assignment_8.ipynb
parproj/: .gitignore  README.md
parproj/Report/: graphpulse_report.tex
parproj/backend/: CMakeLists.txt
parproj/backend/include/core/: csr_builder.h  graph.h  graph_loader.h  workload_splitter.h
parproj/backend/include/features/: betweenness_centrality.h  clustering_coefficient.h  degree_centrality.h  feature_aggregator.h  i_feature_extractor.h  pagerank.h
parproj/backend/include/gpu/: distance_matrix.h  feature_normalizer.h  gpu_memory_manager.h  i_gpu_processor.h
parproj/backend/include/ml/: decision_tree.h  evaluator.h  i_classifier.h  random_forest.h
parproj/backend/plots/presentation/: dataset_results.csv  perf_efficiency_cpu.csv  perf_efficiency_gpu.csv  perf_raw_cpu.csv  perf_raw_gpu.csv  perf_summary_cpu.csv  perf_summary_gpu.csv
parproj/backend/scripts/: benchmark.sh  perf_smoke.sh  perf_sweep.sh  presentation_plots.py  visualize_metrics.py
parproj/backend/src/: main.cpp
parproj/backend/src/core/: csr_builder.cpp  graph_loader.cpp  workload_splitter.cpp
parproj/backend/src/features/: betweenness_centrality.cpp  clustering_coefficient.cpp  degree_centrality.cpp  feature_aggregator.cpp  pagerank.cpp
parproj/backend/src/gpu/: distance_matrix.cu  feature_normalizer.cu  gpu_memory_manager.cu
parproj/backend/src/ml/: decision_tree.cpp  evaluator.cpp  random_forest.cpp
parproj/backend/tests/: CMakeLists.txt  test_csr_builder.cpp  test_features.cpp  test_harness.h  test_main.cpp  test_ml.cpp
parproj/frontend/: package-lock.json  package.json  server.js
parproj/frontend/public/: index.html
